--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,11 @@
 #   - `pytest-sqlite` - Run pytest suites with SQLite
 #   - `test` - Run sharness, pytest-mysql and pytest-sqlite
 #   - `mariadb` - `port 13306` - MariaDB server for docker
-#   - `ca` - Certificate Authority generation
 #   - `git` - `port 2222` - Git over SSH server
 #   - `fastapi` - hypercorn service for aurweb's FastAPI app
-#   - `php-fpm` - Execution server for PHP aurweb
 #   - `nginx` - `ports 8444 (FastAPI), 8443 (PHP)` - Everything
 #     - You can reach `nginx` via FastAPI at `https://localhost:8444/`
-#       or via PHP at `https://localhost:8443/`. CGit can be reached
-#       via the `/cgit/` request uri on either server.
+#       or via PHP at `https://localhost:8443/`.
 #
 # Copyright (C) 2021 aurweb Development
 # All Rights Reserved.
@@ -24,18 +21,6 @@ services:
   aurweb-image:
     build: .
     image: mprweb:latest
-
-  ca:
-    image: mprweb:latest
-    init: true
-    entrypoint: /docker/ca-entrypoint.sh
-    command: /docker/scripts/run-ca.sh
-    healthcheck:
-      test: "bash /docker/health/run-ca.sh"
-      interval: 2s
-    volumes:
-      - ./data:/data
-      - step:/root/.step
 
   memcached:
     image: mprweb:latest
@@ -121,6 +106,8 @@ services:
       mariadb_init:
         condition: service_started
     volumes:
+      - ./data/git_data:/aurweb/aur.git
+      - ./data:/aurweb/data
       - mariadb_run:/var/run/mysqld
 
   smartgit:
@@ -134,49 +121,9 @@ services:
       test: "bash /docker/health/smartgit.sh"
       interval: 2s
     volumes:
-      - git_data:/aurweb/aur.git
+      - ./data/git_data:/aurweb/aur.git
       - ./data:/data
       - smartgit_run:/var/run/smartgit
-
-  cgit-php:
-    image: mprweb:latest
-    init: true
-    environment:
-      - AUR_CONFIG=/aurweb/conf/config
-      - CGIT_CLONE_PREFIX=${AURWEB_PHP_PREFIX}
-      - CGIT_CSS=/css/cgit.css
-    entrypoint: /docker/cgit-entrypoint.sh
-    command: /docker/scripts/run-cgit.sh 3000
-    healthcheck:
-      test: "bash /docker/health/cgit.sh 3000"
-      interval: 2s
-    depends_on:
-      git:
-        condition: service_healthy
-    ports:
-      - "127.0.0.1:13000:3000"
-    volumes:
-      - git_data:/aurweb/aur.git
-
-  cgit-fastapi:
-    image: mprweb:latest
-    init: true
-    environment:
-      - AUR_CONFIG=/aurweb/conf/config
-      - CGIT_CLONE_PREFIX=${AURWEB_FASTAPI_PREFIX}
-      - CGIT_CSS=/static/css/cgit.css
-    entrypoint: /docker/cgit-entrypoint.sh
-    command: /docker/scripts/run-cgit.sh 3000
-    healthcheck:
-      test: "bash /docker/health/cgit.sh 3000"
-      interval: 2s
-    depends_on:
-      git:
-        condition: service_healthy
-    ports:
-      - "127.0.0.1:13001:3000"
-    volumes:
-      - git_data:/aurweb/aur.git
 
   cron:
     image: mprweb:latest
@@ -193,32 +140,6 @@ services:
       - ./aurweb:/aurweb/aurweb
       - mariadb_run:/var/run/mysqld
       - archives:/var/lib/aurweb/archives
-
-  php-fpm:
-    image: mprweb:latest
-    init: true
-    environment:
-      - AUR_CONFIG=/aurweb/conf/config
-      - AURWEB_PHP_PREFIX=${AURWEB_PHP_PREFIX}
-      - AURWEB_SSHD_PREFIX=${AURWEB_SSHD_PREFIX}
-      - AUR_CONFIG_IMMUTABLE=${AUR_CONFIG_IMMUTABLE:-0}
-    entrypoint: /docker/php-entrypoint.sh
-    command: /docker/scripts/run-php.sh
-    healthcheck:
-      test: "bash /docker/health/php.sh"
-      interval: 2s
-    depends_on:
-      git:
-        condition: service_healthy
-      memcached:
-        condition: service_healthy
-      cron:
-        condition: service_started
-    volumes:
-      - mariadb_run:/var/run/mysqld
-      - archives:/var/lib/aurweb/archives
-    ports:
-      - "127.0.0.1:19000:9000"
 
   fastapi:
     image: mprweb:latest
@@ -245,6 +166,17 @@ services:
       cron:
         condition: service_started
     volumes:
+      - ./data:/data
+      - ./docker:/docker
+      - ./aurweb:/aurweb/aurweb
+      - ./media:/aurweb/media
+      - ./migrations:/aurweb/migrations
+      - ./test:/aurweb/test
+      - ./web/html:/aurweb/web/html
+      - ./web/template:/aurweb/web/template
+      - ./web/lib:/aurweb/web/lib
+      - ./templates:/aurweb/templates
+      - ./data/git_data:/aurweb/aur.git
       - mariadb_run:/var/run/mysqld
     ports:
       - "127.0.0.1:18000:8000"
@@ -267,17 +199,9 @@ services:
       - archives:/var/lib/aurweb/archives
       - smartgit_run:/var/run/smartgit
     depends_on:
-      ca:
-        condition: service_started
-      cgit-php:
-        condition: service_healthy
-      cgit-fastapi:
-        condition: service_healthy
       smartgit:
         condition: service_healthy
       fastapi:
-        condition: service_healthy
-      php-fpm:
         condition: service_healthy
 
   sharness:
@@ -364,7 +288,6 @@ volumes:
   mariadb_test_run: {}
   mariadb_run: {} # Share /var/run/mysqld/mysqld.sock
   mariadb_data: {} # Share /var/lib/mysql
-  git_data: {} # Share aurweb/aur.git
   smartgit_run: {}
   archives: {}
   step: {}
