--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ AURWEB_SSHD_PREFIX=ssh://aur@localhost:2222
 GIT_DATA_DIR="./aur.git/"
 TEST_RECURSION_LIMIT=10000
 COMMIT_HASH=
+PYTHONPATH='/aurweb:/aurweb/app'
