Disabled coverage runs

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,10 +5,7 @@ PROVE := $(shell command -v prove 2> /dev/null)
 MAKEFLAGS = -j1
 
 # IMPORTANT: `sh` should come somewhere AFTER `pytest`.
-check: sh pytest
-
-pytest:
-	cd .. && coverage run --append /usr/bin/pytest test/
+check: sh
 
 ifdef PROVE
 sh:
@@ -16,14 +13,6 @@ sh:
 else
 sh: $(T)
 endif
-
-coverage:
-	cd .. && coverage report --include='aurweb/*'
-	cd .. && coverage xml --include='aurweb/*'
-
-clean:
-	$(RM) -r test-results/
-	rm -f ../.coverage
 
 $(T):
 	@echo "*** $@ ***"; $(SHELL) $@ -v
