--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ extend-ignore = E203 W503
 install_requires =
 	# General
 	aiofiles==0.7.0
+	aiohttp==3.8.1
 	asgiref==3.4.1
 	bcrypt==3.2.0
 	bleach==4.1.0
@@ -75,3 +76,4 @@ console_scripts =
 	aurweb-usermaint = aurweb.scripts.usermaint:main
 	aurweb-config = aurweb.scripts.config:main
 	aurweb-adduser = aurweb.scripts.adduser:main
+	aurweb-oodcheck = aurweb.scripts.oodcheck:main
