Ported Git scripts to SQLAlchemy
This also brought the removal of the general SSH interface for interacting with the MPR, as we'd like to add such functionality to the RPC interface in the future.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,7 @@ services:
       mariadb_init:
         condition: service_started
     volumes:
+      - ./aurweb:/aurweb/aurweb
       - ./data/git_data:/aurweb/aur.git
       - ./data:/aurweb/data
       - ./docker:/docker
