--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,16 @@ max-line-length = 88
 extend-ignore = E203 W503
 
 [options]
+package_dir =
+	aurweb=aurweb
+
 install_requires =
 	# General
 	aiofiles==0.7.0
 	aiohttp==3.8.1
 	asgiref==3.4.1
 	bcrypt==3.2.0
+	beautifulsoup4==4.10.0
 	bleach==4.1.0
 	email-validator==1.1.3
 	fakeredis==1.6.1
