Do all Renovate dependency updates in single PR [CI SKIP]

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,19 @@
   "extends": [
     "config:base"
   ],
-  "prHourlyLimit": 0
+  "groupName": "all dependencies",
+  "separateMajorMinor": false,
+  "groupSlug": "all",
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "groupName": "all dependencies",
+      "groupSlug": "all"
+    }
+  ],
+  "lockFileMaintenance": {
+    "enabled": false
+  }
 }
