Temporarily disable renovate PR limit [CI SKIP]

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
   "groupName": "all dependencies",
   "separateMajorMinor": false,
   "groupSlug": "all",
+  "prHourlyLimit": 0,
   "packageRules": [
     {
       "matchPackagePatterns": [
