Convert to new Git repository layout
We're using a new layout for Git reposities so that we can better manage certain features (like version tags on each commit). This required us to have a different repository for each package instead of just using different tags, so we had to completely redo the layout.

The MPR instance has already been migrated to the new layout, it's just awaiting this change to make it all work properly.

--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -56,10 +56,9 @@ http {
             uwsgi_pass   smartgit;
             uwsgi_modifier1 9;
             uwsgi_param  SCRIPT_FILENAME /usr/lib/git-core/git-http-backend;
-            uwsgi_param  PATH_INFO /aur.git/$3;
+            uwsgi_param  PATH_INFO /$3;
             uwsgi_param  GIT_HTTP_EXPORT_ALL "";
-            uwsgi_param  GIT_NAMESPACE $1;
-            uwsgi_param  GIT_PROJECT_ROOT /aurweb;
+            uwsgi_param  GIT_PROJECT_ROOT /aurweb/aur.git/$1;
         }
 
         location / {
