--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
 	httpx==0.22.0
 	itsdangerous==2.1.2
 	lxml==4.8.0
+	makedeb-srcinfo
 	orjson==3.6.7
 	protobuf==3.20.0
 	pygit2==1.9.1
@@ -52,7 +53,6 @@ install_requires =
 	posix-ipc==1.0.5
 	pyalpm==0.10.6
 	fastapi==0.75.1
-	srcinfo==0.0.8
 
 	# Dev dependencies.
 	autoflake==1.4
