One day this will be completed

--- a/conf/mprweb.cfg
+++ b/conf/mprweb.cfg
@@ -8,6 +8,7 @@ user = aur
 ;password = aur
 
 [options]
+aurwebdir = /aurweb
 username_min_len = 3
 username_max_len = 16
 passwd_min_len = 8
@@ -92,7 +93,8 @@ client_id =
 client_secret =
 
 [fastapi]
-session_secret =
+bind_address = 127.0.0.1:8082
+session_secret = secret
 
 [serve]
 repo-path = /srv/http/aurweb/aur.git/
@@ -104,18 +106,13 @@ ssh-cmdline = ssh aur@aur.archlinux.org
 [update]
 max-blob-size = 256000
 
-[aurblup]
-db-path = /srv/http/aurweb/aurblup/
-sync-dbs = core extra community multilib testing community-testing
-server = https://mirrors.kernel.org/archlinux/%s/os/x86_64
-
 [mkpkglists]
-archivedir = /srv/http/aurweb/web/html
-packagesfile = /srv/http/aurweb/web/html/packages.gz
-packagesmetafile = /srv/http/aurweb/web/html/packages-meta-v1.json.gz
-packagesmetaextfile = /srv/http/aurweb/web/html/packages-meta-ext-v1.json.gz
-pkgbasefile = /srv/http/aurweb/web/html/pkgbase.gz
-userfile = /srv/http/aurweb/web/html/users.gz
+archivedir = /var/lib/aurweb/archives
+packagesfile = /var/lib/aurweb/archives/packages.gz
+packagesmetafile = /var/lib/aurweb/archives/packages-meta-v1.json.gz
+packagesmetaextfile = /var/lib/aurweb/archives/packages-meta-ext-v1.json.gz
+pkgbasefile = /var/lib/aurweb/archives/pkgbase.gz
+userfile = /var/lib/aurweb/archives/users.gz
 
 [devel]
 ; commit_url is a format string used to produce a link to a commit hash.
