--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: true
 contact_links:
   - name: Questions & support
-    url: https://matrix.to/#/#makedeb-mpr:hunterwittenborn.com
-    about: Please ask any questions here.
-  - name: Report a security issue
+    url: https://docs.makedeb.org/support/obtaining-support
+    about: Ask any questions here.
+  - name: Security issue
     url: https://github.com/makedeb/mprweb/security/policy
     about: View our security policy.
