--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,9 +1,9 @@
 name: Feature request
-description: Request a new feature
-labels: ["enhancement"]
+description: Request a new feature.
+labels: ["T-Enhancement"]
 body:
   - type: textarea
     attributes:
-      label: Description of feature
+      label: Description of feature.
     validations:
       required: true
