--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -1,11 +1,10 @@
+# Database configuration.
 [database]
-backend = mysql
-host = localhost
-socket = /var/run/mysqld/mysqld.sock
+host = mariadb
 ;port = 3306
-name = AUR
-user = aur
-;password = aur
+name = mprweb
+user = mprweb
+password = a_very_strong_database_password
 
 [options]
 aurwebdir = /aurweb
