--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,6 @@ services:
     image: mprweb:latest
     init: true
     entrypoint: /docker/mariadb-entrypoint.sh
-    command: /usr/bin/mysqld_safe --datadir=/var/lib/mysql
     ports:
       # This will expose mariadbd on 127.0.0.1:13306 in the host.
       # Ex: `mysql -uaur -paur -h 127.0.0.1 -P 13306 aurweb`
@@ -53,20 +52,12 @@ services:
     volumes:
       - mariadb_run:/var/run/mysqld # Bind socket in this volume.
       - mariadb_data:/var/lib/mysql
+      - ./mprweb.cfg:/mprweb.cfg
+      - ./aurweb:/aurweb/aurweb
+      - ./docker:/docker
     healthcheck:
       test: "bash /docker/health/mariadb.sh"
       interval: 2s
-
-  mariadb_init:
-    image: mprweb:latest
-    init: true
-    entrypoint: /docker/mariadb-init-entrypoint.sh
-    command: echo "MariaDB tables initialized."
-    volumes:
-      - mariadb_run:/var/run/mysqld
-    depends_on:
-      mariadb:
-        condition: service_healthy
 
   git:
     image: mprweb:latest
@@ -80,9 +71,6 @@ services:
     healthcheck:
       test: "bash /docker/health/sshd.sh"
       interval: 2s
-    depends_on:
-      mariadb_init:
-        condition: service_started
     volumes:
       - ./aurweb:/aurweb/aurweb
       - ./data/git_data:/aurweb/aur.git
@@ -108,9 +96,6 @@ services:
     init: true
     entrypoint: /docker/cron-entrypoint.sh
     command: /docker/scripts/run-cron.sh
-    depends_on:
-      mariadb_init:
-        condition: service_started
     volumes:
       - ./aurweb:/aurweb/aurweb
       - mariadb_run:/var/run/mysqld
