--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -17,10 +17,10 @@ sql_debug = 0
 login_timeout = 7200
 persistent_cookie_timeout = 2592000
 max_filesize_uncompressed = 8388608
-disable_http_login = 1
-aur_location = https://aur.archlinux.org
-git_clone_uri_anon = https://aur.archlinux.org/%s.git
-git_clone_uri_priv = ssh://aur@aur.archlinux.org/%s.git
+disable_http_login = 0
+aur_location = http://localhost:8080
+git_clone_uri_anon = http://localhost:8080/%s.git
+git_clone_uri_priv = ssh://mpr@localhost:2222/%s.git
 max_rpc_results = 5000
 max_search_results = 2500
 max_depends = 1000
@@ -33,17 +33,14 @@ source_file_uri = /cgit/aur.git/tree/%s?h=%s
 log_uri = /cgit/aur.git/log/?h=%s
 commit_uri = /cgit/aur.git/commit/?h=%s&id=%s
 snapshot_uri = /cgit/aur.git/snapshot/%s.tar.gz
-enable-maintenance = 1
-maintenance-exceptions = 127.0.0.1
+enable-maintenance = 0
 render-comment-cmd = /usr/bin/aurweb-rendercomment
 localedir = /srv/http/aurweb/web/locale/
-; memcache, apc, or redis
-; memcache/apc are supported in PHP, redis is supported in Python.
-cache = none
+cache = redis
 cache_pkginfo_ttl = 86400
 memcache_servers = 127.0.0.1:11211
 salt_rounds = 12
-redis_address = redis://localhost
+redis_address = redis://redis
 ; Toggles traceback display in templates/errors/500.html.
 traceback = 0
 ; Bot user for actions such as automatic out of date notifications.
@@ -96,11 +93,11 @@ bind_address = 127.0.0.1:8082
 session_secret = secret
 
 [serve]
-repo-path = /srv/http/aurweb/aur.git/
+repo-path = /aurweb/aur.git
 repo-regex = [a-z0-9][a-z0-9.+_-]*$
 git-shell-cmd = /usr/bin/git-shell
 git-update-cmd = /usr/bin/aurweb-git-update
-ssh-cmdline = ssh aur@aur.archlinux.org
+ssh-cmdline = ssh mpr@mpr.makedeb.org
 
 [update]
 max-blob-size = 256000
@@ -114,16 +111,9 @@ pkgbasefile = /var/lib/aurweb/archives/pkgbase.gz
 userfile = /var/lib/aurweb/archives/users.gz
 
 [devel]
-; commit_url is a format string used to produce a link to a commit hash.
-commit_url = https://gitlab.archlinux.org/archlinux/aurweb/-/commits/%s
-
-; If commit_hash is configured, a link to the commit based on commit_url
-; will be displayed in aurweb's footer with the release version.
-; This allows us to diagnose which commit a particular instance is on
-; during testing of development branches.
-; Example deployment configuration step:
-; sed -r "s/^;?(commit_hash) =.*$/\1 = $(git rev-parse HEAD)/" config
-;commit_hash = 1234567
+commit_url = https://github.com/makedeb/mprweb/commit/%s
+# TODO: Get the latest hash automatically when the FastAPI container starts up.
+commit_hash = HEAD
 
 [tuvotereminder]
 ; Offsets used to determine when TUs should be reminded about
