--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -1,4 +1,12 @@
+# The documentation of this configuration file is a work in progress.
+# TODO: Make it not work in progress :P.
+#
 # Database configuration.
+# host (mandatory): The hostname/IP of the MySQL instance.
+# port (optional): The port of the MySQL instance (defaults to 3306).
+# name (mandatory): The database for mprweb to store data in.
+# user (mandatory): The user to connect to the MySQL instance with.
+# password (optional): The password to connect to the MySQL instance with. Connects with no password if unset.
 [database]
 host = mariadb
 ;port = 3306
@@ -6,24 +14,36 @@ name = mprweb
 user = mprweb
 password = a_very_strong_database_password
 
+# General configuration.
+# username_min_len (mandatory): The minimum length of user's usernames.
+# username_max_len (mandatory): The maximum length of user's usernames.
+# passwd_min_len (mandatory): The minimum length of user's passwords.
+# default_lang (mandatory): The default language for new users.
+# default_timezone (mandatory): The default timezone for new users.
+# login_timeout (mandatory): The amount of time new logins in the web interface is valid for.
+# persistent_cookie_timeout (mandatory): Haven't found out yet (TODO!).
+# disable_http_login (mandatory): Boolean to disable logins via HTTP, and to require HTTPS. You should probably leave this off and put a TLS-capable reverse proxy in front of your instance.
+# aur_location (mandatory): The URL to your instance.
+# git_clone_uri_anon (mandatory): The URL used for HTTP Git clones.
+# git_clone_uri_priv (mandatory): The URL used for SSH Git clones.
+# max_rpc_results (mandatory): To be deprecated. Don't modify (TODO!).
+# max_search_results (mandatory): The maximum amount of results to return on routes such as '/packages'.
+# aur_request_ml (mandatory): To be deprecated. Don't modify (TODO!).
+# request_idle_time (mandatory): The amount of time that must pass before a TU is allowed to orphan a package via an orphan request.
 [options]
-aurwebdir = /aurweb
 username_min_len = 3
 username_max_len = 16
 passwd_min_len = 8
 default_lang = en
 default_timezone = UTC
-sql_debug = 0
 login_timeout = 7200
 persistent_cookie_timeout = 2592000
-max_filesize_uncompressed = 8388608
 disable_http_login = 0
 aur_location = http://localhost:8080
 git_clone_uri_anon = http://localhost:8080/%s.git
 git_clone_uri_priv = ssh://mpr@localhost:2222/%s.git
 max_rpc_results = 5000
 max_search_results = 2500
-max_depends = 1000
 aur_request_ml = aur-requests@lists.archlinux.org
 request_idle_time = 1209600
 request_archive_time = 15552000
@@ -34,13 +54,12 @@ log_uri = /cgit/aur.git/log/?h=%s
 commit_uri = /cgit/aur.git/commit/?h=%s&id=%s
 snapshot_uri = /cgit/aur.git/snapshot/%s.tar.gz
 enable-maintenance = 0
+#maintenance-exceptions = 127.0.0.1
 render-comment-cmd = /usr/bin/aurweb-rendercomment
 localedir = /srv/http/aurweb/web/locale/
-cache = redis
 cache_pkginfo_ttl = 86400
 memcache_servers = 127.0.0.1:11211
 salt_rounds = 12
-redis_address = redis://redis
 ; Toggles traceback display in templates/errors/500.html.
 traceback = 0
 ; Bot user for actions such as automatic out of date notifications.
