More API changes
- All API keys are now stored hashed via sha256 in the database. This should help in the instance of a database leak.

- Made some HTML and CSS changes.

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,3 +81,4 @@ console_scripts =
 	aurweb-config = aurweb.scripts.config:main
 	aurweb-adduser = aurweb.scripts.adduser:main
 	aurweb-oodcheck = aurweb.scripts.oodcheck:main
+	aurweb-cleankeys = aurweb.scripts.cleankeys:main
