--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -13,6 +13,7 @@ host = mariadb
 name = mprweb
 user = mprweb
 password = a_very_strong_database_password
+backend = mysql
 
 # General configuration.
 # username_min_len (mandatory): The minimum length of user's usernames.
@@ -59,6 +60,7 @@ render-comment-cmd = /usr/bin/aurweb-rendercomment
 localedir = /srv/http/aurweb/web/locale/
 cache_pkginfo_ttl = 86400
 memcache_servers = 127.0.0.1:11211
+redis_address = redis://127.0.0.1
 salt_rounds = 12
 ; Toggles traceback display in templates/errors/500.html.
 traceback = 0
