--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -1,5 +1,5 @@
-# The documentation of this configuration file is a work in progress.
-# TODO: Make it not work in progress :P.
+# The documentation of this configuration file is a work-in-progress.
+# TODO: Make it not work-in-progress :P.
 #
 # Database configuration.
 # host (mandatory): The hostname/IP of the MySQL instance.
@@ -31,6 +31,14 @@ backend = mysql
 # max_search_results (mandatory): The maximum amount of results to return on routes such as '/packages'.
 # aur_request_ml (mandatory): To be deprecated. Don't modify (TODO!).
 # request_idle_time (mandatory): The amount of time that must pass before a TU is allowed to orphan a package via an orphan request.
+# auto_orphan_age (mandatory): The amount of time that must pass before a package marked as out of date can be automatically orphaned via an orphan request.
+# auto_delete_age (mandatory): The amount of time that must pass before a package marked as out of date can be automatically deleted via a deletion request.
+# enable-maintenance (mandatory): Whether the instance is put into maintenance mode. This disables actions that can cause changes on an instance (only the SSH Git interface behaves this way currently). Certain IPs can be whitelisted from maintenance from via the 'maintenance-exceptions' key.
+# maintenance-exceptions (optional): A space-separated list of IPs to allow normal functionality on the instance when 'enable-maintenance' is on.
+# redis_address (mandatory): The address to the redis instance to use on the instance.
+# salt_rounds (mandatory): The number of rounds a password is salted before being stored in the databases. (TODO: I don't know too much about cryptography, and I need to figure out how this works in practice).
+# traceback (mandatory): Whether to show Python tracebacks when processing a request via the web interface. This is useful for local testing, but you **SHOULD** turn this off in a production instance, as it can leak sensitive user information.
+# bot-user (mandatory): The username of a user to perform automated actions by the system. Currently this is used when reporting out of date notifications for Repology checks, though this may be expanded upon in the future.
 [options]
 username_min_len = 3
 username_max_len = 16
@@ -47,25 +55,19 @@ max_rpc_results = 5000
 max_search_results = 2500
 aur_request_ml = aur-requests@lists.archlinux.org
 request_idle_time = 1209600
-request_archive_time = 15552000
 auto_orphan_age = 15552000
 auto_delete_age = 86400
-source_file_uri = /cgit/aur.git/tree/%s?h=%s
-log_uri = /cgit/aur.git/log/?h=%s
-commit_uri = /cgit/aur.git/commit/?h=%s&id=%s
-snapshot_uri = /cgit/aur.git/snapshot/%s.tar.gz
 enable-maintenance = 0
 #maintenance-exceptions = 127.0.0.1
-render-comment-cmd = /usr/bin/aurweb-rendercomment
-cache_pkginfo_ttl = 86400
-memcache_servers = 127.0.0.1:11211
-redis_address = redis://127.0.0.1
+redis_address = redis://redis
 salt_rounds = 12
-; Toggles traceback display in templates/errors/500.html.
 traceback = 1
-; Bot user for actions such as automatic out of date notifications.
 bot-user = kavplex
 
+# Ratelimit configuration.
+# request_limit (mandatory): The amount of requests allowed every period of 'window_length' in the RPC interface.
+# window_length (mandatory): The period of time that 'request_limit' lasts before getting reset.
+# cache (mandatory): I have no clue, nor do I care enough to figure it out. It's something for the RPC interface, which I plan on removing in the future anyway. We'll document this if it starts to pose any issues before getting removed.
 [ratelimit]
 request_limit = 4000
 window_length = 86400
@@ -75,8 +77,9 @@ window_length = 86400
 ; cache will be ignored and the database will be used.
 cache = 1
 
+# Notifications configuration.
+#
 [notifications]
-notify-cmd = /usr/bin/aurweb-notify
 sendmail =
 smtp-server = localhost
 smtp-port = 25
