Specify version of makedeb SRCINFO lib
We haven't migrated to the new implementation yet, we need this big time.

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
 	httpx==0.22.0
 	itsdangerous==2.1.2
 	lxml==4.8.0
-	makedeb-srcinfo
+	makedeb-srcinfo==0.5.2
 	orjson==3.6.7
 	protobuf==3.20.0
 	pygit2==1.9.1
