Pusing changes to see what happens in CI

--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -65,22 +65,17 @@ traceback = 1
 bot-user = kavplex
 
 # Ratelimit configuration.
+# This section will be removed in the future once the RPC interface is removed.
 # request_limit (mandatory): The amount of requests allowed every period of 'window_length' in the RPC interface.
 # window_length (mandatory): The period of time that 'request_limit' lasts before getting reset.
 # cache (mandatory): I have no clue, nor do I care enough to figure it out. It's something for the RPC interface, which I plan on removing in the future anyway. We'll document this if it starts to pose any issues before getting removed.
 [ratelimit]
 request_limit = 4000
 window_length = 86400
-; Force-utilize cache for ratelimiting. In FastAPI, forced cache (1)
-; will cause the ratelimit path to use a real or fake Redis instance
-; depending on the configured options.cache setting. Otherwise,
-; cache will be ignored and the database will be used.
 cache = 1
 
 # Notifications configuration.
-#
 [notifications]
-sendmail =
 smtp-server = localhost
 smtp-port = 25
 smtp-use-ssl = 0
@@ -93,6 +88,10 @@ reply-to = noreply@aur.archlinux.org
 ; various server details like uncaught exceptions.
 postmaster = admin@example.org
 
+# SSH fingerprint configuration.
+# Ed25519 (mandatory): The Ed25519 SSH key fingerprint.
+# ECDSA (mandatory): The ECDSA SSH key fingerprint.
+# RSA (mandatory): The RSA SSH key fingerprint.
 [fingerprints]
 Ed25519 = SHA256:HQ03dn6EasJHNDlt51KpQpFkT3yBX83x7BoIkA1iv2k
 ECDSA = SHA256:L71Q91yHwmHPYYkJMDgj0xmUuw16qFOhJbBr1mzsiOI
