Slowly making progress

--- a/mprweb.cfg
+++ b/mprweb.cfg
@@ -74,7 +74,15 @@ request_limit = 4000
 window_length = 86400
 cache = 1
 
-# Notifications configuration.
+# Email notifications configuration.
+# smtp-server (mandatory): The FQDN of the SMTP mail server.
+# smtp-port (mandatory): The port to connect to the mail server on.
+# smtp-use-ssl (mandatory): Whether to use SSL for connection encryption.
+# smtp-use-starttls (mandatory): Whether to use TLS for connection encryption.
+# smtp-user (optional): The username to authenticate to the mail server with.
+# smtp-password (optional): The password to authenticate to the mail server with.
+# sender (mandatory): The email address the instance will send emails under.
+# reply-to (mandatory): The email address to set the 'Reply-To' header in emails to.
 [notifications]
 smtp-server = localhost
 smtp-port = 25
@@ -84,9 +92,6 @@ smtp-user =
 smtp-password =
 sender = notify@aur.archlinux.org
 reply-to = noreply@aur.archlinux.org
-; Administration email which will receive notifications about
-; various server details like uncaught exceptions.
-postmaster = admin@example.org
 
 # SSH fingerprint configuration.
 # Ed25519 (mandatory): The Ed25519 SSH key fingerprint.
@@ -97,50 +102,29 @@ Ed25519 = SHA256:HQ03dn6EasJHNDlt51KpQpFkT3yBX83x7BoIkA1iv2k
 ECDSA = SHA256:L71Q91yHwmHPYYkJMDgj0xmUuw16qFOhJbBr1mzsiOI
 RSA = SHA256:Ju+yWiMb/2O+gKQ9RJCDqvRg7l+Q95KFAeqM5sr6l2s
 
-[auth]
-; For U2F key prefixes, see the following documentation from openssh:
-; https://github.com/openssh/openssh-portable/blob/master/PROTOCOL.u2f
-valid-keytypes = ssh-rsa ssh-dss ecdsa-sha2-nistp256 ecdsa-sha2-nistp384 ecdsa-sha2-nistp521 ssh-ed25519 sk-ecdsa-sha2-nistp256@openssh.com sk-ecdsa-sha2-nistp256-cert-v01@openssh.com sk-ssh-ed25519@openssh.com sk-ssh-ed25519-cert-v01@openssh.com
-username-regex = [a-zA-Z0-9]+[.\-_]?[a-zA-Z0-9]+$
-git-serve-cmd = /usr/bin/aurweb-git-serve
-ssh-options = restrict
-
-[sso]
-openid_configuration =
-client_id =
-client_secret =
-
+# FastAPI instance configuration.
+# session_secret (mandatory): The secret used for things like user sessions.
 [fastapi]
-bind_address = 127.0.0.1:8082
 session_secret = secret
 
-[serve]
-repo-path = /aurweb/aur.git
-repo-regex = [a-z0-9][a-z0-9.+_-]*$
-git-shell-cmd = /usr/bin/git-shell
-git-update-cmd = /usr/bin/aurweb-git-update
-ssh-cmdline = ssh mpr@mpr.makedeb.org
-
+# Git repository package update configuration.
+# max-blox-size (mandatory): The maximum blob size allowed in Git repositories.
 [update]
 max-blob-size = 256000
 
-[mkpkglists]
-archivedir = /var/lib/aurweb/archives
-packagesfile = /var/lib/aurweb/archives/packages.gz
-packagesmetafile = /var/lib/aurweb/archives/packages-meta-v1.json.gz
-packagesmetaextfile = /var/lib/aurweb/archives/packages-meta-ext-v1.json.gz
-pkgbasefile = /var/lib/aurweb/archives/pkgbase.gz
-userfile = /var/lib/aurweb/archives/users.gz
-
+# Instance source code information.
+# commit_url (mandatory): The URL to the source code of this instance.
+# commit_hash (mandatory): The current commit used for this instance.
 [devel]
 commit_url = https://github.com/makedeb/mprweb/commit/%s
-# TODO: Get the latest hash automatically when the FastAPI container starts up.
 commit_hash = HEAD
 
+# Offsets used to determine when TUs should be reminded about
+# votes that they should make.
+# Reminders will be sent out for all votes that a TU has not yet
+# voted on if the following are true:
+# - End >= now + range_start
+# - End <= now + range_end
 [tuvotereminder]
-; Offsets used to determine when TUs should be reminded about
-; votes that they should make.
-; Reminders will be sent out for all votes that a TU has not yet
-; voted on based on `now + range_start <= End <= now + range_end`.
 range_start = 500
 range_end = 172800
